test/files/res/bug687.check

nsc> 
nsc> bug687/QueryB.scala:3: error: name clash between defined and inherited member:
method equals:(o: java.lang.Object)Boolean and
method equals:(x$1: Any)Boolean in class Any
have same type after erasure: (o: java.lang.Object)Boolean
  override def equals(o : Object) = false;
               ^
